# Python-color-bot

./: .env.example  .gitignore  .replit  AGENTS.md  Dockerfile  README-v2.md  docker-compose.yml  formula_engine.py  init_db.py  pyproject.toml  query_engine.py  replit.md  requirements.txt
alembic/: __init__.py  env.py
api/: ai_mock.py  ai_service.py  ai_translate_support.py  backend.py  catalog.py  catalog_pg.py  cross_line_conversion.py  formula_dispatch.py  formula_text_parser.py  main.py  quality.py  schemas.py  shade_catalog.py  test_ai_mock.py  test_ai_service_config.py  test_ai_translate_support.py  test_api.py  test_cross_line_conversion.py  test_production_api.py  test_quality.py  test_reference_pack.py
app/: __init__.py  config.py  db.py  dependencies.py  main.py  paths.py
docs/: IMPLEMENTATION_STATUS.md  engine_ai_review_plan.md
frontend/: dev.mjs  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
hair-color-db/: stage1_brand_line_inventory.json
hair_color_db/: README.md  __init__.py
prd/: colorsynth-formula-engine-v2.md
scripts/: audit_stage_data.py  bootstrap_v2.py  docker-entrypoint.sh  export_crossline_to_csv.py  export_stage12_to_csv.py  export_stage13_to_csv.py  export_utils.py  seed_db.py  v2_paths.py
src/: __init__.py  aveda_intense_formula.py  fill_shade_lookup.py  formula_builder.py  formula_engine_service.py  loaders.py  logging_utils.py  matching.py  paths.py  schema.py  sub_range_intake.py  test_fill_shade_lookup.py  test_formula_builder.py  test_sub_range_intake.py  tone_materialization.py
(+308 files in other folders)
